--- a/cmd/customer/config.yml.example
+++ b/cmd/customer/config.yml.example
@@ -6,7 +6,7 @@ lang: en
 
 httpConf:
   host: 127.0.0.1
-  port: 8080
+  port: 8100
 
 loggerConf:
   mode:
@@ -18,7 +18,7 @@ langConf:
   srcPath: ../../internal/language/en/language.json
 
 dbConf:
-  dsn: root:password@tcp(127.0.0.1:3306)/skgobo-main-ed?charset=utf8mb4&parseTime=True&loc=Local
+  dsn: user:password@tcp(127.0.0.1:3306)/blog-be-using-go?charset=utf8mb4&parseTime=True&loc=Local
   maxOpenConns: 5
   maxIdleConns: 5
   maxIdleTime: 100
