--- a/.github/workflows/customer.yaml
+++ b/.github/workflows/customer.yaml
@@ -8,10 +8,7 @@ on:
     branches: [ "feat/cicd" ]
 
 jobs:
-  container-job:
-    runs-on: ubuntu-latest
-
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     services:
