--- a/.github/workflows/customer.yaml
+++ b/.github/workflows/customer.yaml
@@ -1,5 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# weird since github doesn't detect this workflow from previous update, is there something wrong? 
 
 name: Go
 
