--- a/cmd/customer/config.yml.e2e-test.example
+++ b/cmd/customer/config.yml.e2e-test.example
@@ -15,7 +15,8 @@ loggerConf:
 
 langConf:
   active: en
-  srcPath: ../../internal/language/en/language.json
+  path: ../../internal/language
+  fileName: data.json
 
 dbConf:
   dsn: santo:sembodo@tcp(127.0.0.1:3306)/blog-parctice-be-using-go?charset=utf8mb4&parseTime=True&loc=Local
