feat/cicd: making service run in background

--- a/.github/workflows/customer.yaml
+++ b/.github/workflows/customer.yaml
@@ -45,7 +45,7 @@ jobs:
         cp config.yml.ci-test.example config.yaml
         go build -v .
         chmod 775 customer
-        ./customer
+        ./customer &
 
     - name: Test
       run: |
