feat/cicd: fix test path

--- a/.github/workflows/customer.yaml
+++ b/.github/workflows/customer.yaml
@@ -51,5 +51,5 @@ jobs:
       run: |
         go get github.com/karincake/emping
         go install github.com/karincake/emping
-        cd ../../test/e2e
+        cd test/e2e
         emping customer-test.yml
