--- a/.github/workflows/customer.yaml
+++ b/.github/workflows/customer.yaml
@@ -52,4 +52,4 @@ jobs:
         go get github.com/karincake/emping
         go install github.com/karincake/emping
         cd test/e2e
-        emping customer-test.yml
+        emping customer-test.yaml
